2004-09-29  Bruno Haible  <bruno@clisp.org>

	* fill-out.lisp (stream-start-s-expression, stream-end-s-expression):
	No need for EVAL-WHEN (COMPILE).
	* format.lisp (formatter-main-1): Don't call STREAM-START-S-EXPRESSION
	and STREAM-END-S-EXPRESSION twice when the ~S code dispatches to
	DO-FORMAT-S-EXPRESSION.

2004-09-20  Bruno Haible  <bruno@clisp.org>

	* documentation.lisp (documentation, (setf documentation)): Define
	with reversed argument-precedence-order.

2004-09-28  Sam Steingold  <sds@gnu.org>

	* format.lisp (formatter-main-1): call STREAM-START-S-EXPRESSION
	and STREAM-END-S-EXPRESSION for ~S

2004-09-28  Sam Steingold  <sds@gnu.org>

	package locking should not interfere with SETQ return value
	* control.d (SETQ): restore value1 after setq()
	* eval.d (setq): return value
	* lispbibl.d (setq): updated the declaration
	Reported by Jörg Höhle

2004-09-28  Bruno Haible  <bruno@clisp.org>

	* utils/clispload.lsp (*expected-failures*): Remove DIRECTORY.[67],
	which are fixed. Remove NAMESTRING.[34], which is commented out.

2004-09-28  Sam Steingold  <sds@gnu.org>

	* fill-out.lisp (fill-stream-flush-buffer): even when BUFFER is
	empty, NEWLINE-P still has to be respected

2004-09-28  Sam Steingold  <sds@gnu.org>

	* loop.lisp (loop): as per 6.1.1.1.1 and 6.1.1.1.2, LOOP is
	extended when it contains ATOMs, not just loop keywords
	Reported by Kalle Olavi Niemitalo <kon@iki.fi>
	* compiler.lisp (simplify): use TAGBODY instead of simple LOOP
	* subtypep.lisp (intervals-union): ditto

2004-09-28  Bruno Haible  <bruno@clisp.org>

	Make (MAKE-SEQUENCE (FIND-CLASS 'LIST) n) work.
	* sequence.d (valid_type1): Recognize also built-in class objects.
	* clos-class3.lisp: Pass <list> to %defclos as well.

2004-09-19  Bruno Haible  <bruno@clisp.org>

	Support for user-defined DEFGENERIC options.
	* clos-genfun3.lisp (make-generic-function): Add caller, whole-form,
	user-defined-args arguments. Perform checking of generic-function
	options.